# template-monorepository-py3

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  constraints-dev.txt  constraints.txt  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-local.txt  requirements.in  requirements.txt
libraries/async-database-postgresql/: requirements.txt  setup.py
libraries/async-database-postgresql/async_database_postgresql/: __init__.py  config.py  storage.py
libraries/async-rabbitmq/: requirements-editable.txt  requirements.txt  setup.py
libraries/async-rabbitmq/async_rabbitmq/: __init__.py  client.py  config.py
libraries/async-utils/: setup.py
libraries/async-utils/async_utils/: __init__.py
libraries/async-workers/: requirements-editable.txt  requirements.txt  setup.py
libraries/async-workers-cron/: requirements-editable.txt  requirements.txt  setup.py
libraries/async-workers-cron/async_workers_cron/: __init__.py
libraries/async-workers-rabbitmq/: requirements-editable.txt  setup.py
libraries/async-workers-rabbitmq/async_workers_rabbitmq/: __init__.py
libraries/async-workers/async_workers/: __init__.py  base.py  rabbitmq.py
libraries/example-library/: setup.py
libraries/fastapi-settings/: requirements-editable.txt  requirements.txt  setup.py
libraries/fastapi-settings/fastapi_settings/: __init__.py  application.py  config.py
libraries/logging-settings/: requirements-editable.txt  requirements.txt  setup.py
libraries/logging-settings/logging_settings/: __init__.py  config.py  utils.py
libraries/pydantic-base-settings/: requirements.txt  setup.py
libraries/service-settings/: requirements.txt  setup.py
libraries/trace-settings/: setup.py
scripts/internal/: README.md
scripts/local-support/: README.md  setup.py
services/example-service/: Dockerfile  README.md  alembic.ini  docker-compose.yml  requirements-editable.txt  requirements.txt  setup.py
services/example-workers/: Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  requirements-editable.txt  requirements.in  requirements.txt  setup.py
(+105 files in other folders)
