[build-system]
requires = ["setuptools", "wheel"]

[tool.black]
line-length = 120
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
py_version=39
profile = "black"
src_paths = [
    "libraries/*",
     "services/*",
]
line_length = 120

[tool.pytest.ini_options]
minversion = "7.1"
faulthandler_timeout = 5
junit_logging = "all"
addopts = "-ra -q"
pythonpath = [
    "libraries/example-library",
]
required_plugins = [
    "pytest-asyncio==0.21.1",
     "pytest-mock==3.12.0",
]
testpaths = ["libraries", "services"]
filterwarnings = ["ignore::DeprecationWarning"]
log_level = "DEBUG"

[tool.mypy]
python_version = "3.9"
exclude = [
    'setup\.py$',
]
ignore_missing_imports = true
