[build-system]
requires = [ "setuptools >= 61.0", "wheel",]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 119
target-version = [ "py39",]
include = "\\.pyi?$"
exclude = "/( \\.git | \\.hg | \\.mypy_cache | \\.tox| \\.venv | _build | buck-out | build | dist)/"

[tool.isort]
py_version = 311
profile = "black"
src_paths = [ "libraries/*", "services/*",]
line_length = 119

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
files = [ "libraries", "scripts", "services",]
exclude = [ "setup\\.py$",]
ignore_missing_imports = true
strict_optional = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
minversion = "7.1"
faulthandler_timeout = 5
junit_logging = "all"
addopts = "-ra -q"
pythonpath = [ "libraries/async-database-postgresql", "libraries/async-rabbitmq", "libraries/async-utils", "libraries/async-workers", "libraries/async-workers-cron", "libraries/async-workers-rabbit", "libraries/fastapi-settings", "libraries/logging-settings", "libraries/trace-settings",]
required_plugins = [ "pytest-asyncio==0.23.6", "pytest-mock==3.12.0",]
testpaths = [ "libraries", "services",]
filterwarnings = [ "ignore::DeprecationWarning",]
log_level = "DEBUG"
